2009-11-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/about.c, THANKS:
   Add Peter Scholtens and Ayke van Laethem to list of translators. Move
   Kurt de Bree into section of previous translators.


2009-11-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/about.c, src/symbols.c, THANKS, tagmanager/vhdl.c:
   Fix VHDL symbol list to display all tags (patch from Kelvin Gardiner,
   thanks).


2009-11-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Make stylesets take a ft_id argument so they can be reused fully with
   custom filetypes, so custom styles and keywords can be set.
 * src/highlighting.c:
   Fix setting filetype properties when both the system and the user file
   have properties set.
 * src/symbols.c, tagmanager/vhdl.c:
   Parse VHDL signals.
 * src/highlighting.c:
   Fix lexer settings for custom filetypes.


2009-11-23  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/php.c:
   Remove duplicate regular expression for parsing classes.
   Fix and improve parsing of constants (patch by Harold Aling, thanks).
 * doc/geany.1.in, doc/geany.html, doc/geany.txt, src/main.c,
   src/main.h, THANKS, src/about.c:
   Add new command line option "--socket-file" to be able to specify
   separate socket filenames for instances
   (closes #2896027, patch by Jörn Reder, thanks).
 * src/keybindings.c, src/keybindings.h:
   Add keybindings_check_event() to manually check GdkKeyEvents against
   Geany's keybindings.
 * src/callbacks.c, src/utils.c, src/utils.h:
   Add and use utils_get_help_url().
 * geany.glade, src/interface.c, src/prefs.c:
   Add a Help button to the preferences dialog.
   Handle Help keybinding events for the preferences dialog especially
   and open the manual with the corresponding anchor link to the current
   preferences page (same goes for the new Help button).


2009-11-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
