@@ -64,4 +64,6 @@ void main_reload_configuration(void);
 
 void main_locale_init(const gchar *locale_dir, const gchar *gettext_package);
 
+gboolean main_is_realized(void);
+
 #endif
